# Grove

./: CLAUDE.md  README.md  index.html  landing.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-landing.yml  release.yml
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  launcher.rs  lib.rs
src/components/: BranchCompare.tsx  BranchSwitcher.tsx  BranchTimeline.tsx  CloneRepo.tsx  CommitHistory.tsx  ConflictRow.tsx  DeleteRepoModal.tsx  DiffViewer.tsx  FileHistory.tsx  FileRow.tsx  FileTreePanel.tsx  GitGraph.tsx  GitignoreEditor.tsx  GlobalSearch.tsx  GroupPicker.tsx  InteractiveRebase.tsx  LauncherMenu.tsx  RemotesPanel.tsx  RepoCard.tsx  RepoDetail.tsx  SettingsPanel.tsx  SplashScreen.tsx  StandupModal.tsx  StashPanel.tsx  StatsPanel.tsx  SubmodulesPanel.tsx  TagsPanel.tsx  TourGuide.tsx  UpdateChecker.tsx  WorktreesPanel.tsx
src/components/ui/: scroll-area.tsx
src/lib/: ai.ts  fileTree.ts  graphLayout.ts  notify.ts  settings.ts  time.ts
